--- a/HalloWorld/Base.lproj/Main.storyboard
+++ b/HalloWorld/Base.lproj/Main.storyboard
@@ -35,6 +35,9 @@
                                 <buttonConfiguration key="configuration" style="plain" title="Show Text">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
                                 </buttonConfiguration>
+                                <connections>
+                                    <action selector="makeButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="67n-vq-Xtz"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -46,6 +49,10 @@
                             <constraint firstItem="V0Z-AR-BEe" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nKq-mT-WRc"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="halloLabel" destination="2qi-Xh-BvE" id="xFC-Ob-Alz"/>
+                        <outlet property="showButton" destination="V0Z-AR-BEe" id="EVd-Dl-C1C"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
